k8s/guestbook/00-frontend-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gb-frontend
spec: {}
status: {}
